deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "goviolin-service"
  namespace: goviolin
spec:
  selector:
    app: goviolin
  ports:
    - name: "goviolin-port"
      protocol: TCP
      port: 8080
      targetPort: 8080
